some improvements | add transitions

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta name="description" content="Munchkin counter Vue3 app">
+    <meta name="author" content="Andres Haehnel">
     <title>Munchkin Counter</title>
   </head>
   <body>
